--- a/iTicket-war/web/pages/templates/defaultAdmin.xhtml
+++ b/iTicket-war/web/pages/templates/defaultAdmin.xhtml
@@ -54,6 +54,9 @@
                             <li>
                                 <a href="#{request.contextPath}/faces/pages/catalogs/users/list_user.xhtml">Accounts</a>
                             </li>
+                            <li>
+                                <a href="#{request.contextPath}/faces/pages/catalogs/status/list_status.xhtml">Status</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
